# hpc-r1-sc25

./: README.md
DISTL-TRL/: README.md
GEN-VLLM/: README.md
RL-P_VERL/: .gitignore  Makefile  README.md  batch.sh  launch.sh  pyproject.toml  sourceme.sh
RL-P_VERL/src/: preprocess_gsm8k.py
SFT-MD/: README.md
SFT-TRL/: .gitignore  Makefile  README.md  batch.sh  pyproject.toml  sourceme.sh
SFT-TRL/accelerate_configs/: perlmutter-zero-3.yaml
SFT-TRL/src/: sft.py
