[build-system]
requires = ["setuptools>=61.0", "wheel", "ninja"]

[project]
name = "hpcr1-rl-basic"
version = "0.0.1"
description = "Currently only the most basic example of SFT on HPC. Our full code will be released shortly."
readme = "README.md"
requires-python = "==3.11.7"
# dependencies = []

[dependency-groups]
main = [
    "accelerate>=1.4.0",
    "datasets",
    "deepspeed>=0.16.4",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.2",
    "setuptools>=75.8.0",
    "torch==2.6.0",  # Maybe try 2.6.0 for compat
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "trl==0.13.0",          # 0.15.1 seems to have a bug with liger-kernel
    "transformers>=4.49.0",
    "numpy==1.26.4",
    "pyzmq>=27.0.1",   # vLLM appears to fail without this
]
utils = [
    "pandas>=2.2.3",
    "huggingface-hub[cli]>=0.19.2,<1.0",
]
# These are taken basically directly from VERL commit ae285703a899e647341b25d56146304e96c063c1
verl = [
    "accelerate>=1.10.0",
    "codetiming>=1.4.0",
    "datasets>=4.0.0",
    "dill>=0.3.8",
    "fastapi>=0.116.1",
    "flash-attn>=2.8.2",
    "hydra-core>=1.3.2",
    "latex2sympy2-extended>=1.10.2",
    "liger-kernel>=0.6.1",
    "math-verify>=0.8.0",
    "numpy<2.0.0",
    "packaging>=20.0",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "pre-commit>=4.2.0",
    "pyarrow>=19.0.0",
    "pybind11>=3.0.0",
    "pylatexenc>=2.10",
    "ray[default]>=2.48.0",
    "tensordict>=0.8.0,!=0.9.0,<=0.9.1",
    "torchdata>=0.11.0",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
]
vllm_rollout = [
    "vllm==0.8.3"
]

# Optional dependencies (extras_require in setup.py)
[project.optional-dependencies]
gpu = ["liger-kernel>=0.5.3", "flash-attn==2.8.2"]
test = ["pytest", "yapf", "py-spy"]


[tool.uv]
default-groups = ["main", "utils", "verl", "vllm_rollout"]
compile-bytecode = true # Can help with startup times at expense of install time
# no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
# Will require these extra packages when building flash-attn.
# It's important that the torch version matches the one used by this package.
# Consider using == in both your dependencies and here for an exact match on the torch version.
flash-attn = ["setuptools>=80.9.0", "wheel", "ninja", "torch==2.6.0", "numpy==2.3.2", "hatchling>=1.27.0"]

[tool.setuptools]
py-modules = []
